--- a/Machine Learning/ML_2/ML_2.ipynb
+++ b/Machine Learning/ML_2/ML_2.ipynb
@@ -156,7 +156,7 @@
     "    - 이런 문제가 더 자주 발생하고, 더 중요하다.\n",
     "    - __데이터의 수, Capacity는 상대적이다__\n",
     "\n",
-    "## 2-2-5. Overfitting의 문제를 해결하려면__\n",
+    "## 2-2-5. Overfitting의 문제를 해결하려면\n",
     "    - 1) 데이터를 무지하게 많이 모은다. Capacity 높은 모델이 Big Data를 때려 넣는다.\n",
     "    - 2) (더 모을 수 없는 상황이라면) 모델 Capacity를 제한하면 된다.\n",
     "        - 더 작은 차수를 쓰도록 Hypothesis를 바꿔준다.\n",
