--- a/Dplyr_Basic_Functions_Exercises.ipynb
+++ b/Dplyr_Basic_Functions_Exercises.ipynb
@@ -17,7 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(dplyr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t150 obs. of  5 variables:\n",
+      " $ Sepal.Length: num  5.1 4.9 4.7 4.6 5 5.4 4.6 5 4.4 4.9 ...\n",
+      " $ Sepal.Width : num  3.5 3 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 ...\n",
+      " $ Petal.Length: num  1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 1.5 ...\n",
+      " $ Petal.Width : num  0.2 0.2 0.2 0.2 0.2 0.4 0.3 0.2 0.2 0.1 ...\n",
+      " $ Species     : Factor w/ 3 levels \"setosa\",\"versicolor\",..: 1 1 1 1 1 1 1 1 1 1 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(iris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,93 +119,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>'Sepal.Length'</li>\n",
-       "\t<li>'Sepal.Width'</li>\n",
-       "\t<li>'Petal.Length'</li>\n",
-       "\t<li>'Petal.Width'</li>\n",
-       "\t<li>'Species'</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'Sepal.Length'\n",
-       "\\item 'Sepal.Width'\n",
-       "\\item 'Petal.Length'\n",
-       "\\item 'Petal.Width'\n",
-       "\\item 'Species'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'Sepal.Length'\n",
-       "2. 'Sepal.Width'\n",
-       "3. 'Petal.Length'\n",
-       "4. 'Petal.Width'\n",
-       "5. 'Species'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] \"Sepal.Length\" \"Sepal.Width\"  \"Petal.Length\" \"Petal.Width\"  \"Species\"     "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>Sepal.Length</th><th scope=col>Sepal.Width</th><th scope=col>Species</th></tr></thead>\n",
+       "<thead><tr><th scope=col>Sepal.Length</th><th scope=col>Sepal.Width</th><th scope=col>Petal.Width</th><th scope=col>Species</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>5.1   </td><td>3.5   </td><td>setosa</td></tr>\n",
-       "\t<tr><td>4.9   </td><td>3.0   </td><td>setosa</td></tr>\n",
-       "\t<tr><td>4.7   </td><td>3.2   </td><td>setosa</td></tr>\n",
-       "\t<tr><td>4.6   </td><td>3.1   </td><td>setosa</td></tr>\n",
-       "\t<tr><td>5.0   </td><td>3.6   </td><td>setosa</td></tr>\n",
-       "\t<tr><td>5.4   </td><td>3.9   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>5.1   </td><td>3.5   </td><td>0.2   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>4.9   </td><td>3.0   </td><td>0.2   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>4.7   </td><td>3.2   </td><td>0.2   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>4.6   </td><td>3.1   </td><td>0.2   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>5.0   </td><td>3.6   </td><td>0.2   </td><td>setosa</td></tr>\n",
+       "\t<tr><td>5.4   </td><td>3.9   </td><td>0.4   </td><td>setosa</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "\\begin{tabular}{r|lll}\n",
-       " Sepal.Length & Sepal.Width & Species\\\\\n",
+       "\\begin{tabular}{r|llll}\n",
+       " Sepal.Length & Sepal.Width & Petal.Width & Species\\\\\n",
        "\\hline\n",
-       "\t 5.1    & 3.5    & setosa\\\\\n",
-       "\t 4.9    & 3.0    & setosa\\\\\n",
-       "\t 4.7    & 3.2    & setosa\\\\\n",
-       "\t 4.6    & 3.1    & setosa\\\\\n",
-       "\t 5.0    & 3.6    & setosa\\\\\n",
-       "\t 5.4    & 3.9    & setosa\\\\\n",
+       "\t 5.1    & 3.5    & 0.2    & setosa\\\\\n",
+       "\t 4.9    & 3.0    & 0.2    & setosa\\\\\n",
+       "\t 4.7    & 3.2    & 0.2    & setosa\\\\\n",
+       "\t 4.6    & 3.1    & 0.2    & setosa\\\\\n",
+       "\t 5.0    & 3.6    & 0.2    & setosa\\\\\n",
+       "\t 5.4    & 3.9    & 0.4    & setosa\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "Sepal.Length | Sepal.Width | Species | \n",
+       "Sepal.Length | Sepal.Width | Petal.Width | Species | \n",
        "|---|---|---|---|---|---|\n",
-       "| 5.1    | 3.5    | setosa | \n",
-       "| 4.9    | 3.0    | setosa | \n",
-       "| 4.7    | 3.2    | setosa | \n",
-       "| 4.6    | 3.1    | setosa | \n",
-       "| 5.0    | 3.6    | setosa | \n",
-       "| 5.4    | 3.9    | setosa | \n",
+       "| 5.1    | 3.5    | 0.2    | setosa | \n",
+       "| 4.9    | 3.0    | 0.2    | setosa | \n",
+       "| 4.7    | 3.2    | 0.2    | setosa | \n",
+       "| 4.6    | 3.1    | 0.2    | setosa | \n",
+       "| 5.0    | 3.6    | 0.2    | setosa | \n",
+       "| 5.4    | 3.9    | 0.4    | setosa | \n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "  Sepal.Length Sepal.Width Species\n",
-       "1 5.1          3.5         setosa \n",
-       "2 4.9          3.0         setosa \n",
-       "3 4.7          3.2         setosa \n",
-       "4 4.6          3.1         setosa \n",
-       "5 5.0          3.6         setosa \n",
-       "6 5.4          3.9         setosa "
+       "  Sepal.Length Sepal.Width Petal.Width Species\n",
+       "1 5.1          3.5         0.2         setosa \n",
+       "2 4.9          3.0         0.2         setosa \n",
+       "3 4.7          3.2         0.2         setosa \n",
+       "4 4.6          3.1         0.2         setosa \n",
+       "5 5.0          3.6         0.2         setosa \n",
+       "6 5.4          3.9         0.4         setosa "
       ]
      },
      "metadata": {},
@@ -182,8 +177,7 @@
     }
    ],
    "source": [
-    "names(iris)\n",
-    "iris %>% select(-Petal.Length, -Petal.Width) %>% head"
+    "iris %>% select(-Petal.Length) %>% head"
    ]
   },
   {
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -554,48 +548,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>Sepal.Length</th><th scope=col>Sepal.Width</th><th scope=col>Petal.Length</th><th scope=col>Petal.Width</th><th scope=col>Species</th><th scope=col>proportion</th><th scope=col>avg_slength</th></tr></thead>\n",
+       "<thead><tr><th scope=col>Sepal.Length</th><th scope=col>Sepal.Width</th><th scope=col>Petal.Length</th><th scope=col>Petal.Width</th><th scope=col>Species</th><th scope=col>proportion</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>5.1     </td><td>3.5     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.457143</td><td>5.843333</td></tr>\n",
-       "\t<tr><td>4.9     </td><td>3.0     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.633333</td><td>5.843333</td></tr>\n",
-       "\t<tr><td>4.7     </td><td>3.2     </td><td>1.3     </td><td>0.2     </td><td>setosa  </td><td>1.468750</td><td>5.843333</td></tr>\n",
-       "\t<tr><td>4.6     </td><td>3.1     </td><td>1.5     </td><td>0.2     </td><td>setosa  </td><td>1.483871</td><td>5.843333</td></tr>\n",
-       "\t<tr><td>5.0     </td><td>3.6     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.388889</td><td>5.843333</td></tr>\n",
-       "\t<tr><td>5.4     </td><td>3.9     </td><td>1.7     </td><td>0.4     </td><td>setosa  </td><td>1.384615</td><td>5.843333</td></tr>\n",
+       "\t<tr><td>5.1     </td><td>3.5     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.457143</td></tr>\n",
+       "\t<tr><td>4.9     </td><td>3.0     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.633333</td></tr>\n",
+       "\t<tr><td>4.7     </td><td>3.2     </td><td>1.3     </td><td>0.2     </td><td>setosa  </td><td>1.468750</td></tr>\n",
+       "\t<tr><td>4.6     </td><td>3.1     </td><td>1.5     </td><td>0.2     </td><td>setosa  </td><td>1.483871</td></tr>\n",
+       "\t<tr><td>5.0     </td><td>3.6     </td><td>1.4     </td><td>0.2     </td><td>setosa  </td><td>1.388889</td></tr>\n",
+       "\t<tr><td>5.4     </td><td>3.9     </td><td>1.7     </td><td>0.4     </td><td>setosa  </td><td>1.384615</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "\\begin{tabular}{r|lllllll}\n",
-       " Sepal.Length & Sepal.Width & Petal.Length & Petal.Width & Species & proportion & avg\\_slength\\\\\n",
+       "\\begin{tabular}{r|llllll}\n",
+       " Sepal.Length & Sepal.Width & Petal.Length & Petal.Width & Species & proportion\\\\\n",
        "\\hline\n",
-       "\t 5.1      & 3.5      & 1.4      & 0.2      & setosa   & 1.457143 & 5.843333\\\\\n",
-       "\t 4.9      & 3.0      & 1.4      & 0.2      & setosa   & 1.633333 & 5.843333\\\\\n",
-       "\t 4.7      & 3.2      & 1.3      & 0.2      & setosa   & 1.468750 & 5.843333\\\\\n",
-       "\t 4.6      & 3.1      & 1.5      & 0.2      & setosa   & 1.483871 & 5.843333\\\\\n",
-       "\t 5.0      & 3.6      & 1.4      & 0.2      & setosa   & 1.388889 & 5.843333\\\\\n",
-       "\t 5.4      & 3.9      & 1.7      & 0.4      & setosa   & 1.384615 & 5.843333\\\\\n",
+       "\t 5.1      & 3.5      & 1.4      & 0.2      & setosa   & 1.457143\\\\\n",
+       "\t 4.9      & 3.0      & 1.4      & 0.2      & setosa   & 1.633333\\\\\n",
+       "\t 4.7      & 3.2      & 1.3      & 0.2      & setosa   & 1.468750\\\\\n",
+       "\t 4.6      & 3.1      & 1.5      & 0.2      & setosa   & 1.483871\\\\\n",
+       "\t 5.0      & 3.6      & 1.4      & 0.2      & setosa   & 1.388889\\\\\n",
+       "\t 5.4      & 3.9      & 1.7      & 0.4      & setosa   & 1.384615\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "Sepal.Length | Sepal.Width | Petal.Length | Petal.Width | Species | proportion | avg_slength | \n",
+       "Sepal.Length | Sepal.Width | Petal.Length | Petal.Width | Species | proportion | \n",
        "|---|---|---|---|---|---|\n",
-       "| 5.1      | 3.5      | 1.4      | 0.2      | setosa   | 1.457143 | 5.843333 | \n",
-       "| 4.9      | 3.0      | 1.4      | 0.2      | setosa   | 1.633333 | 5.843333 | \n",
-       "| 4.7      | 3.2      | 1.3      | 0.2      | setosa   | 1.468750 | 5.843333 | \n",
-       "| 4.6      | 3.1      | 1.5      | 0.2      | setosa   | 1.483871 | 5.843333 | \n",
-       "| 5.0      | 3.6      | 1.4      | 0.2      | setosa   | 1.388889 | 5.843333 | \n",
-       "| 5.4      | 3.9      | 1.7      | 0.4      | setosa   | 1.384615 | 5.843333 | \n",
+       "| 5.1      | 3.5      | 1.4      | 0.2      | setosa   | 1.457143 | \n",
+       "| 4.9      | 3.0      | 1.4      | 0.2      | setosa   | 1.633333 | \n",
+       "| 4.7      | 3.2      | 1.3      | 0.2      | setosa   | 1.468750 | \n",
+       "| 4.6      | 3.1      | 1.5      | 0.2      | setosa   | 1.483871 | \n",
+       "| 5.0      | 3.6      | 1.4      | 0.2      | setosa   | 1.388889 | \n",
+       "| 5.4      | 3.9      | 1.7      | 0.4      | setosa   | 1.384615 | \n",
        "\n",
        "\n"
       ],
@@ -606,14 +598,7 @@
        "3 4.7          3.2         1.3          0.2         setosa  1.468750  \n",
        "4 4.6          3.1         1.5          0.2         setosa  1.483871  \n",
        "5 5.0          3.6         1.4          0.2         setosa  1.388889  \n",
-       "6 5.4          3.9         1.7          0.4         setosa  1.384615  \n",
-       "  avg_slength\n",
-       "1 5.843333   \n",
-       "2 5.843333   \n",
-       "3 5.843333   \n",
-       "4 5.843333   \n",
-       "5 5.843333   \n",
-       "6 5.843333   "
+       "6 5.4          3.9         1.7          0.4         setosa  1.384615  "
       ]
      },
      "metadata": {},
@@ -623,7 +608,6 @@
    "source": [
     "iris %>%\n",
     "    mutate(proportion = Sepal.Length / Sepal.Width) %>%\n",
-    "    mutate(avg_slength = mean(Sepal.Length)) %>%\n",
     "    head"
    ]
   },
@@ -637,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -690,8 +674,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -754,15 +740,8 @@
     "              min_slength = min(Sepal.Length),\n",
     "              max_slength = max(Sepal.Length),\n",
     "              total = n()) %>%\n",
-    "head"
+    "    head"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
