--- a/Machine_Learning/Statistics/Statistics_for_Analysis.ipynb
+++ b/Machine_Learning/Statistics/Statistics_for_Analysis.ipynb
@@ -35,14 +35,17 @@
     ">> - ex) 지방선거 ... 명목형 변수들(지역, 성별)끼리 연관이 있는지 확인\n",
     "\n",
     "## 4. 가설검정\n",
-    "### 4-1. Hyprothesis\n",
+    "### 4-1-1. Hyprothesis\n",
     "> - __귀무가설 (null hypothesis, H0)__\n",
     ">> - 기존에 연구나 조사가 되어진 사실, 알려진 사실\n",
     ">> - __같은가?(의미x)__\n",
-    "\n",
     "> - __대립가설 (alternative hypothesis, H1)__\n",
     ">> - 연구자가 새롭게 주장하고 싶은 가설, 알고 싶은 것\n",
     ">> - __다른가?(의미0)__\n",
+    "\n",
+    "### 4-1-2. 요약\n",
+    "> - __귀무가설은 차이가 없다, 영향력이 없다, 연관성이 없다, 효과가 없다.__\n",
+    "> - __대립가설은 차이가 있다, 영향력이 있다, 연관성이 있다, 효과가 있다.__\n",
     "\n",
     "### 4-2. [1종 오류와 2종 오류](https://m.blog.naver.com/PostView.nhn?blogId=hjs8419&logNo=220671013205&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F)\n",
     "\n",
@@ -67,17 +70,42 @@
     "\n",
     "\n",
     "### 4-3. 유의수준/유의확률\n",
-    "- __유의수준(significance level)__ : 1종 오류의 위험성을 부담할 최대 확률\n",
-    "> - 보통 0.05(5%)로 잡는다.\n",
-    "> - 면적에 해당하는 값을 기각역이라고 한다.\n",
+    "- __신뢰수준__\n",
+    "> - 가설을 검정할 때 얼마나 빡빡하게 검정할 것인지를 결정하는 수준을 말한다.\n",
+    "> - 연구활동은 99%, 일반적으로는 95%, 단순설문조사는 90% 정도의 신뢰수준을 사용한다.\n",
+    "- __유의수준(significance level, α)__ : 1종 오류의 위험성을 부담할 최대 확률\n",
+    "> -  유의수준 = 1 - 신뢰수준\n",
+    "> - 가설을 검정할 때, \"이 정도까지 벗어나면 귀무가설이 오류라고 인정하겠다\"하는 수준을 말한다.\n",
+    ">> - 보통 0.05(5%)로 잡는다(평균과 평균으로부터 상, 하한 구간의 경계선을 95%로 정해 놓는다).\n",
+    ">> - 관측치가 이 신뢰구간 안에 포함되는지 본다\n",
     "- __기각역__ : 가설검정에서 귀무가설이 기각되는 검정 통계량의 영역\n",
     "> - 가설이 통계적으로 맞았는지 틀렸는지 알려주는 기준(값)\n",
+    "> - 확률분포에서 귀무가설을 기각하는 영역을 말한다.\n",
+    "> - 기각역에 검정통계량이 위치하면 귀무가설을 기각한다.\n",
+    "> - 양측검정인 경우 기각역은 유의수준 / 2 이고, 단측검정인 경우 기각역은 유의수준과 같다.\n",
+    "<img src = \"https://t1.daumcdn.net/cfile/tistory/2376B13458D9C13F29\">\n",
+    "- __임계치__ : 신뢰구간에서 기각역으로 넘어가는 기준이 되는 x값을 말한다.\n",
+    "\n",
+    "<img src = \"https://t1.daumcdn.net/cfile/tistory/222B073358D9C2BD09\">\n",
+    "#### 검정통계량이 어디에 위치하느냐에 따라 귀무가설을 기각하거나 기각하지 않는다.\n",
+    "\n",
     "- __검정통계량__ : 통계적 가설을 검정할 목적으로 사용되는 통계량, 수집된 표본을 통해 귀무가설의 옳고 그름을 판단하는 기준이 되는 값 또는 통계량\n",
     "> - 실제 데이터(수치)로 얻은 값\n",
+    "> - 가설을 검정하기 위한 기준으로 사용하는 값(t값 등)을 말한다.\n",
+    "> - 검정통계량이 확률분포 상에 어디에 위치하는지에 따라 귀무가설을 기각하거나 기각하지 않는다.\n",
     "> - ex) 새로 개발한 치킨 100마리의 평균 칼로리값 (표준화를 시켜서 계산을 해야 함)\n",
-    "- __유의확률(significance probability, P-value)__ : 귀무가설이 맞다고 가정할 때 얻은 결과보다 극단적인 결과가 실제로 관측될 확률, 검정통계량을 통해 얻어지는 확률\n",
+    "<img src = \"https://t1.daumcdn.net/cfile/tistory/217ABA3858D9CB502E\">\n",
+    "- __유의확률(significance probability, p-value)__ : 귀무가설이 맞다고 가정할 때 얻은 결과보다 극단적인 결과가 실제로 관측될 확률, 검정통계량을 통해 얻어지는 확률\n",
+    "> - 자유도를 고려했을 때 검정통계량에 대한 확률을 말한다. (귀무가설의 신뢰구간을 벗어나는 확률)\n",
+    "> - 기각역보다 유의확률이 작아야 귀무가설을 기각할 수 있다.\n",
     "> - 그때의 면적이 유의확률 ?\n",
-    "- 결국, 유의수준과 유의확률 밖에 보지 않는다. 그리고 유의수준은 임의(0.05)로 정한다\n",
+    "\n",
+    "- __자유도__\n",
+    "> - x값이 가질 수 있는 값의 범위를 말한다.\n",
+    "> - 자유도가 주어지지 않는 경우, 자유도= 표본수(n) - 1\n",
+    "\n",
+    "#### 결국, 유의수준과 유의확률 밖에 보지 않는다. 그리고 유의수준은 임의(0.05)로 정한다\n",
+    "\n",
     "\n",
     "### 4-4. 가설검정\n",
     "- 모든 분석은 '가설검정'을 거친다.\n",
@@ -86,7 +114,7 @@
     "> - 달라야지 의미가 있다. 같은 건 의미가 없다.\n",
     "\n",
     "- 유의수준과 유의확률(p-value)를 이용하여 가설검정을 한다.\n",
-    "- 설명할 때, \"유의수준을 0.05로 설정했더니 결과가 이렇게 나왔다.\"\n",
+    "- 설명할 때, \"유의수준(알파값)을 0.05로 설정했더니 결과가 이렇게 나왔다.\"\n",
     "> - 유의수준 > 유의확률\n",
     ">> - 귀무가설 채택, 대립가설 기각\n",
     ">> - 통계적으로 유의하지 않다.\n",
@@ -104,6 +132,12 @@
     ">> - 남 > 여 : O\n",
     ">> - 남 = 여 : X\n",
     ">> - 남 < 여 : XX\n",
+    "\n",
+    "#### 귀무가설 채택, 대립가설 기각\n",
+    "<img src = \"https://t1.daumcdn.net/cfile/tistory/2363874A58D9E26403\">\n",
+    "#### 귀무가설 기각, 대립가설 채택\n",
+    "<img src = \"https://t1.daumcdn.net/cfile/tistory/2770224E58D9E5C407\">\n",
+    "#### 표본에 따라 귀무가설이 기각되기도 하고 기각되지 않을 수 있으므로 표본은 모집단을 대표할 수 있도록 잘 샘플링 하는 것이 매우 중요하다.\n",
     "\n",
     "\n",
     "## 5. 회귀분석\n",
@@ -221,9 +255,13 @@
     "> - 모든 통계 모형들이 정규분포를 가정하고 만들었다.\n",
     ">> - why : (결과를 추정하기 어렵기 때문에) 이런 가정을 한 것이다.\n",
     ">> - obj : 통계 분석은 표본을 통해서 모집단을 추정하는 것\n",
-    "> - 점 추정과 구간 추정\n",
-    ">> - 점 추정: 소수점 까지 맞추는 것\n",
-    ">> - 구간 추정: 통계에는 구간 추정이 주를 이루는데, __신뢰구간__이 필요하다.\n",
+    "> - 점추정(point estimation)과 구간추정(interval estimation)\n",
+    ">> - __점추정 : 하나의 점(수치)으로 값을 표현__\n",
+    ">>> - 값을 신뢰하기에는 (모집단에 비해)표본의 수가 적고, 표본에는 항상 오차가 존재한다.\n",
+    ">>> - 그러므로 점추정은 그 특성상 값을 신뢰하기 어렵다.\n",
+    ">> - __구간추정 : 점 추정치를 중심으로 일정 구간을 만드는 것__\n",
+    ">>> - 통계에는 구간 추정이 주를 이루는데, __신뢰구간__이 필요하다.\n",
+    ">>> - __구간추정이라고 해서 100% 신뢰할 수 있는 것은 아니다.__ 경우에 따라서는 구간추정치 안에 모수가 포함되지 않을 가능성도 항상 존재한다. 그리고 구간추정은 점추정에 비해 신뢰도가 확실히 높다고 할 수 있지만, 그렇다고 점추정이 전혀 필요 없는 것은 아니다. 왜냐하면 점추정을 기준으로 구간추정을 하기 때문이다.\n",
     ">>> - ex) 지방선거 여론조사 : 표본오차 95%\n",
     ">>>> - 모집단을 대표할 수 있는지에 대한 내용\n",
     ">>>> - 표본을 100번 뽑았을 때, 95번은 모집단을 대표한다는 뜻으로 신뢰수준 +- 3.5%는 점 추정 값에서 +- 된다.\n",
@@ -247,7 +285,6 @@
     ">> - 확률 실험(random experiment) : 결과를 예측할 수 없는 실험\n",
     ">>> - 판단할 때, 독립적이지 않으면 시계열로 가고... 독립적이면 ?\n",
     ">>> - ?\n",
-    "\n",
     "> - 회귀식의 목적은 : y변수에 대한 독립성을 따지는 것\n",
     ">> - ex) 지나가는 사람들, 무작위 패턴\n",
     ">>> - 날씨 : 지금 25도라면 10분 뒤의 온도도 비슷하다. (독립적이지 않고, 종속적이다. Time Series임)\n",
@@ -269,6 +306,7 @@
     "\n",
     "- 확률 실험을 많이 하면 할수록 정규분포의 모양을 갖는다.\n",
     "> - __중심극한정리__\n",
+    ">> - \"N(표집수)가 충분히 많으면, 모든 확률분포는 정규분포로 수렴하며, 평균은 실제 평균에 점점 가까워진다\"\n",
     "\n",
     "- 이 분석법을 왜 하면 안 되냐?\n",
     "> - 특정 상황에서 어떤 분석을 써야하고, 안 써야하는지에 대한 기준을 갖는 것.\n",
@@ -283,7 +321,9 @@
     "> - 통계는 성능을 개선 시키는 것이지 정답은 아니다. 실수는 하지 않는다는 것은 확실하다. 그렇게 가는 것이다.\n",
     "> - 분석이라는 것은 애매하다. 통계는 다 구간추정이다. 80%라는 건 20번 실패할 수 있다는 뜻이다.\n",
     "> - 틀린 것만 방지해도 중간은 간다. 중간까지 갔으면 거기에서 발전시키면 된다. 첫술에 배부를 수 없다.\n",
-    "> - 통계느 동 떨어져 있는 게 아니라 현실이다."
+    "> - 통계느 동 떨어져 있는 게 아니라 현실이다.\n",
+    "- - -\n",
+    "- http://kkokkilkon.tistory.com/36"
    ]
   },
   {
